--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <meta name="description" content="Unique — Первая мульти-игра на смарт контракте BSC">
+  <meta name="keywords"
+    content="Unique, смарт контракт, смарт-контракт, мульти-игра, мульти игра, игра, блокчейн, blockchain, BSC">
+
   <link rel="stylesheet" href="./fonts/fonts.css">
 </head>
 
 <body id="body">
   <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+    <strong>We're sorry but service doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
   </noscript>
   <!-- built files will be auto injected -->
